--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,7 +63,6 @@ li label {
 
 [data-delete] {
   border: none;
-  margin-left: 1em;
+  margin-left: .5em;
   background: none;
-  font-size: 80%;
 }
